Bug 1990170 - Don't clamp max-block-size for bSizeForResolvingRowSizes when re-resolving row sizes. r=layout-reviewers,dholbert

We still want to consider min-block-size. Otherwise the following tests will
fail.

- /css/css-grid/alignment/grid-gutters-016.html
- /css/css-grid/grid-definition/grid-auto-repeat-min-size-004.html

The WPTs in this patch are adapted from bug 1990170 comment 3 (testcase 2).

Differential Revision: https://phabricator.services.mozilla.com/D267003